[package]
name = "candle-crf"
version = "0.8.3"
edition = "2021"
description = "porting pytorch-crf to candle"
readme = "README.md"
repository = "https://github.com/kigichang/candle-crf"
license-file = "LICENSE"
keywords = ["candle", "crf", "pytorch"]

[dependencies]
candle-core = "0.6.0"
candle-nn = "0.6.0"

[dev-dependencies]
itertools = "0.13.0"
tuple-conv = "1.0.1"
anyhow = "1.0.88"

[features]
default = []
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
